tests/errors/circular-reference/a.wit
reference ./b.wit

@a
  - uses @b
a@
